--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -1,163 +1,170 @@
 {
-  "app.toggleMenu": "Abrir/Fechar menu",
-  "app.market": "Mercado",
-  "app.portfolio": "Portfólio",
-  "app.dashboard": "Painel",
-  "app.createCoin": "Criar Moeda",
-  "app.coin": "Moeda",
-  "app.coinPrefix": "Moeda: {{selectedCoin}}",
-  "app.leaderboard": "Ranking",
-  "app.settings": "Configurações",
-  "app.adminPanel": "Painel Admin",
-  "app.promos": "Promoções",
-  "app.gambling": "Apostas",
-  "app.dailyReadyTitle": "Pegue sua recompensa diária!",
-  "app.dailyWaitingTitle": "Próxima recompensa em {{time}}",
-  "app.claimDaily": "Pegar Recompensa",
-  "app.ready": "Pronto!",
-  "app.logout": "Sair",
-  "app.footer": "por zt01 - comunidade no Discord em breve.",
+  "toggleMenu": "Abrir/Fechar menu",
+  "market": "Mercado",
+  "portfolio": "Portfólio",
+  "dashboard": "Painel",
+  "createCoin": "Criar Moeda",
+  "coin": "Moeda",
+  "coinPrefix": "Moeda: {{selectedCoin}}",
+  "leaderboard": "Ranking",
+  "settings": "Configurações",
+  "adminPanel": "Painel Admin",
+  "promos": "Promoções",
+  "gambling": "Apostas",
 
-  "admin.loading": "Carregando...",
-  "admin.accessDenied": "Acesso negado — somente admin.",
-  "admin.confirmUnban": "Desbanir {{username}}?",
-  "admin.confirmBan": "Banir {{username}}?",
-  "admin.userUpdated": "Usuário {{username}} atualizado.",
-  "admin.error": "Erro",
-  "admin.confirmDeleteUser": "Deletar usuário {{username}} e todos os dados dele? Isso não pode ser desfeito.",
-  "admin.userDeleted": "Usuário {{username}} deletado.",
-  "admin.confirmDeleteCoin": "Deletar a coin {{symbol}}? Isso remove transações e saldos de usuários.",
-  "admin.coinDeleted": "Coin {{symbol}} deletada.",
-  "admin.promptNewName": "Novo nome para a coin {{symbol}}",
-  "admin.promptPoolBase": "pool_base (número)",
-  "admin.coinUpdated": "Coin {{symbol}} atualizada.",
-  "admin.confirmReplaceDB": "Substituir todo o DB por este conteúdo? Um backup será criado antes de substituir.",
-  "admin.invalidJson": "JSON inválido: {{message}}",
-  "admin.dbReplaced": "DB substituído. Recarregando listas...",
-  "admin.title": "Painel Admin",
-  "admin.labelAdmin": "Admin: {{username}}",
-  "admin.tabUsers": "Users",
-  "admin.tabCoins": "Coins",
-  "admin.tabDb": "Editor DB",
-  "admin.processing": "Processando...",
-  "admin.usersHeader": "Users ({{count}})",
-  "admin.adminBadge": "(admin)",
-  "admin.userInfo": "id: {{id}} • $ {{balance}} • banido: {{banned}}",
-  "admin.bannedYes": "sim",
-  "admin.bannedNo": "não",
-  "admin.unban": "Desbanir",
-  "admin.ban": "Banir",
-  "admin.delete": "Deletar",
-  "admin.edit": "Editar",
-  "admin.dbEditorTitle": "Editor DB",
-  "admin.dbEditorInfo": "Editando o DB cru. Um backup será criado automaticamente quando você salvar. Use com cuidado.",
-  "admin.saveDb": "Salvar DB (backup)",
-  "admin.reloadDb": "Recarregar",
+  "dailyReadyTitle": "Pegue sua recompensa diária!",
+  "dailyWaitingTitle": "Próxima recompensa em {{time}}",
+  "claimDaily": "Pegar Recompensa",
+  "ready": "Pronto!",
 
-  "auth.login": "Entrar",
-  "auth.register": "Registrar",
-  "auth.placeholderUsername": "username",
-  "auth.placeholderPassword": "password",
-  "auth.recaptchaMissing": "reCAPTCHA não configurado",
-  "auth.captchaIncomplete": "Por favor, complete o captcha",
-  "auth.loggedIn": "Logado",
-  "auth.registeredLoggedIn": "Registrado e logado",
-  "auth.switchTo": "Mudar para {{mode}}",
-  "auth.error": "Erro",
+  "logout": "Sair",
+  "footer": "por zt01 - comunidade no Discord em breve.",
 
-  "coin.back": "← Voltar",
-  "coin.title": "Moeda: {{symbol}}",
-  "coin.loading": "Carregando coin...",
-  "coin.notFound": "Moeda não encontrada / resposta inválida do servidor",
-  "coin.loadingError": "Erro ao carregar coin (veja o console)",
-  "coin.price": "Preço",
-  "coin.poolBase": "Pool base",
-  "coin.poolToken": "Pool token",
-  "coin.changeNA": "—",
-  "coin.volume24hLabel": "Volume 24h",
-  "coin.priceChart": "Preço (24h)",
-  "coin.buyTitle": "Comprar (base → token)",
-  "coin.placeholderUsd": "USD",
-  "coin.max": "Max",
-  "coin.estimatedTokens": "Estimado: {{tokens}} {{symbol}}",
-  "coin.buyButton": "Comprar",
-  "coin.processing": "Processando...",
-  "coin.sellTitle": "Vender (token → base)",
-  "coin.placeholderTokenAmount": "Quantidade de token",
-  "coin.estimatedUsd": "Estimado: ${{usd}}",
-  "coin.sellButton": "Vender",
-  "coin.topHolders": "Top 10 Holders",
-  "coin.loadingHolders": "Carregando holders...",
-  "coin.noHolders": "Ainda sem holders",
-  "coin.invalidUsd": "USD inválido",
-  "coin.buyError": "Erro na compra (veja o console)",
-  "coin.sellError": "Erro na venda (veja o console)",
+  "loading": "Carregando...",
+  "processing": "Processando...",
+  "accessDeniedAdmin": "Acesso negado — somente admin.",
+  "confirmUnban": "Desbanir {{username}}?",
+  "confirmBan": "Banir {{username}}?",
+  "userUpdated": "Usuário {{username}} atualizado.",
+  "confirmDeleteUser": "Deletar usuário {{username}} e todos os dados? Isto não pode ser desfeito.",
+  "userDeleted": "Usuário {{username}} deletado.",
+  "confirmDeleteCoin": "Deletar moeda {{symbol}}? Isso remove transações e saldos de usuários.",
+  "coinDeleted": "Moeda {{symbol}} deletada.",
+  "newNameForCoinPrompt": "Novo nome para a moeda {{symbol}}",
+  "poolBasePrompt": "pool_base (número)",
+  "coinUpdated": "Moeda {{symbol}} atualizada.",
+  "confirmReplaceDB": "Substituir todo o DB com este conteúdo? Um backup será criado antes de substituir.",
+  "dbFetchErrorPrefix": "// erro ao buscar DB: ",
+  "adminLabel": "Admin: {{username}}",
+  "users": "Usuários",
+  "coins": "Moedas",
+  "dbEditor": "Editor DB",
+  "usersCount": "Usuários ({{count}})",
+  "coinsCount": "Moedas ({{count}})",
+  "saveDb": "Salvar DB (backup)",
+  "reload": "Recarregar",
+  "unban": "Desbanir",
+  "ban": "Banir",
+  "delete": "Deletar",
+  "edit": "Editar",
 
-  "create.title": "Criar Moeda",
-  "create.placeholderSymbol": "Symbol (ex: ABC)",
-  "create.placeholderName": "Name",
-  "create.logoLabel": "Logo (opcional — PNG/JPG/GIF/WebP, max ~1.6MB)",
-  "create.fileTooLarge": "Arquivo muito grande. Tamanho máximo: 1.6MB",
-  "create.fileReadError": "Erro ao ler arquivo",
-  "create.fillFields": "Preencha symbol e name",
-  "create.unknownBalance": "Saldo desconhecido — recarregue (Refresh Balance) ou faça login de novo",
-  "create.insufficientBalance": "Saldo insuficiente: é necessário ${{required}} para criar uma coin",
-  "create.success": "Coin criada com preço inicial 0.000001 e 1,000,000,000 tokens na pool",
-  "create.createError": "Erro ao criar coin (ver console)",
-  "create.networkError": "Erro de rede ao criar coin (ver console)",
-  "create.info": "Todas as coins iniciam com preço 0.000001 e a oferta completa (1,000,000,000) vai para a pool. Criar uma coin custa $1,100.",
-  "create.createButton": "Criar ($1,100)",
-  "create.refreshBalance": "Recarregar Saldo",
-  "create.balanceLabel": "Saldo: {{balance}}",
-  "create.insufficientWarning": "Saldo insuficiente: precisa de $1,100 para criar.",
+  "login": "Entrar",
+  "register": "Registrar",
+  "usernamePlaceholder": "usuário",
+  "passwordPlaceholder": "senha",
+  "pleaseCompleteCaptcha": "Por favor complete o captcha",
+  "recaptchaNotConfigured": "reCAPTCHA não configurado",
+  "loggedIn": "Logado",
+  "registeredLoggedIn": "Registrado e logado",
+  "switchTo": "Mudar para {{mode}}",
+  "errorGeneric": "Erro",
+  "submitLogin": "Entrar",
+  "submitRegister": "Registrar",
 
-  "dashboard.title": "Painel",
-  "dashboard.loading": "Carregando...",
-  "dashboard.username": "{{username}}",
-  "dashboard.usdBalance": "Saldo USD: ${{balance}}",
-  "dashboard.tokensTitle": "Tokens",
-  "dashboard.noTokens": "Sem tokens",
-  "dashboard.transactionsTitle": "Transações",
-  "dashboard.noTransactions": "Nenhuma transação",
-  "dashboard.txEntry": "{{date}} — {{type}} {{tokenAmount}} {{symbol}} — ${{usdAmount}}",
+  "back": "← Voltar",
+  "coinTitle": "Moeda: {{symbol}}",
+  "loadingCoin": "Carregando moeda...",
+  "coinNotFound": "Moeda não encontrada / resposta inválida do servidor",
+  "coinLoadError": "Erro ao carregar moeda (veja console)",
+  "price": "Preço",
+  "poolBase": "Pool base",
+  "poolToken": "Pool token",
+  "change24h": "Variação 24h",
+  "volume24h": "Volume 24h",
+  "price24hTitle": "Preço (24h)",
 
-  "leader.topTraders": "Top Traders",
-  "leader.description": "Ranking dos melhores traders na plataforma",
-  "leader.timeAll": "All Time",
-  "leader.time24h": "24h",
-  "leader.time7d": "7d",
-  "leader.loading": "Carregando ranking...",
-  "leader.noTraders": "Nenhum trader encontrado",
-  "leader.platformStats": "Estatísticas da Plataforma",
-  "leader.howToTitle": "Como subir no ranking?",
-  "leader.tip1": "Faça trades lucrativos para aumentar seu saldo em USD",
-  "leader.tip2": "Mantenha uma boa taxa de vitórias (porcentagem de trades vencedores)",
-  "leader.tip3": "Trade ativamente para aumentar seu volume",
-  "leader.tip4": "Diversifique seu portfólio em várias coins",
-  "leader.totalVolume": "Volume Total (24h)",
-  "leader.activeTraders": "Traders Ativos",
-  "leader.totalCoins": "Total de Coins",
-  "leader.avgProfit": "Lucro Médio (24h)",
-  "leader.tradesLabel": "Trades: {{count}}",
-  "leader.winRateLabel": "Taxa de vitória: {{rate}}%",
-  "leader.balanceLabel": "Saldo",
+  "buyTitle": "Comprar (base → token)",
+  "usdPlaceholder": "USD",
+  "max": "Max",
+  "estimatedTokens": "Estimado: {{tokens}} {{symbol}}",
+  "buyBtn": "Comprar",
+  "sellTitle": "Vender (token → base)",
+  "tokenPlaceholder": "Quantidade de token",
+  "estimatedUsd": "Estimado: ${{usd}}",
+  "sellBtn": "Vender",
+  "topHolders": "Top 10 Holders",
+  "loadingHolders": "Carregando holders...",
+  "noHolders": "Ainda não há holders",
+  "boughtMsg": "Comprou {{amount}} {{symbol}}",
+  "soldMsg": "Vendeu {{amount}} {{symbol}}",
+  "invalidUsd": "USD inválido",
+  "buyError": "Erro na compra (veja console)",
+  "sellError": "Erro na venda (veja console)",
+  "processingShort": "Processando...",
 
-  "market.title": "Mercado",
-  "market.loadingList": "Carregando...",
-  "market.errorLoad": "Erro ao carregar mercado",
-  "market.noneAvailable": "Nenhuma coin disponível.",
-  "market.poolLabel": "Pool: {{base}} base • {{token}} token",
-  "market.price": "Preço",
-  "market.volLabel": "Vol 24h {{vol}}",
-  "market.placeholderUsd": "USD",
-  "market.invalidValue": "Valor inválido",
-  "market.bought": "Comprou {{amount}} {{symbol}}",
-  "market.buying": "Comprando...",
-  "market.buy": "Comprar",
-  "market.coinsCount": "{{count}} coins",
+  "createCoinTitle": "Criar Moeda",
+  "symbolPlaceholder": "Símbolo (ex.: ABC)",
+  "namePlaceholder": "Nome",
+  "logoLabel": "Logo (opcional — PNG/JPG/GIF/WebP, max ~1.6MB)",
+  "fileTooLarge": "Arquivo muito grande. Tamanho máximo: 1.6MB",
+  "fileReadError": "Erro ao ler arquivo",
+  "fillSymbolName": "Preencha symbol e name",
+  "balanceUnknown": "Saldo desconhecido — recarregue (Refresh Balance) ou faça login de novo",
+  "insufficientBalanceCreate": "Saldo insuficiente: ${{required}} necessário para criar uma coin",
+  "coinCreatedMsg": "Coin criada com preço inicial 0.000001 e 1,000,000,000 tokens na pool",
+  "createCoinError": "Erro ao criar coin (ver console)",
+  "networkCreateError": "Erro de rede ao criar coin (ver console)",
+  "refreshBalance": "Recarregar saldo",
+  "createCostText": "Todas as moedas começam com preço 0.000001 e full supply (1,000,000,000) vai para a pool. Criar uma moeda custa $1,100.",
+  "createButton": "Criar ($1,100)",
+  "balanceLabel": "Saldo: {{balance}}",
+  "insufficientBalanceNotice": "Saldo insuficiente: precisa de $1,100 para criar.",
 
-  "common.max": "Max",
-  "common.back": "Voltar",
-  "common.yes": "sim",
-  "common.no": "não"
+  "dashboardTitle": "Painel",
+  "loadingShortLabel": "Carregando...",
+  "usdBalanceLabel": "Saldo USD: ${{amount}}",
+  "tokensLabel": "Tokens",
+  "noTokens": "Sem tokens",
+  "transactionsLabel": "Transações",
+  "noTransactions": "Nenhuma transação",
+
+  "topTraders": "Top Traders",
+  "rankingDescription": "Ranking dos melhores traders na plataforma",
+  "timeAll": "Todo o período",
+  "time24h": "24h",
+  "time7d": "7d",
+  "loadingLeaderboard": "Carregando ranking...",
+  "noTraders": "Nenhum trader encontrado",
+  "tradesLabel": "Trades: {{count}}",
+  "winRateLabel": "Taxa de acerto: {{rate}}%",
+  "profit24hLabel": "{{sign}} ${{amount}} (24h)",
+  "platformStats": "Estatísticas da Plataforma",
+  "totalVolume24h": "Volume Total (24h)",
+  "activeTraders": "Traders Ativos",
+  "totalCoins": "Total de Moedas",
+  "avgProfit24h": "Lucro Médio (24h)",
+  "howToClimb": "Como subir no ranking?",
+  "tip1": "Faça trades lucrativos para aumentar seu saldo em USD",
+  "tip2": "Mantenha uma boa taxa de acerto (percentual de trades vencedores)",
+  "tip3": "Trade ativamente para aumentar seu volume",
+  "tip4": "Diversifique seu portfólio entre várias moedas",
+
+  "marketTitle": "Mercado",
+  "loadingMarket": "Carregando...",
+  "coinsCount": "{{count}} coins",
+  "marketNoCoins": "Nenhuma coin disponível.",
+  "priceLabel": "Preço",
+  "vol24Label": "Vol 24h",
+  "buyInputPlaceholder": "USD",
+  "invalidValue": "Valor inválido",
+  "boughtMsgMarket": "Comprou {{amount}} {{symbol}}",
+  "buyErrorMarket": "Erro na compra",
+  "buying": "Comprando...",
+  "buyBtnText": "Comprar",
+  "poolLabel": "Pool: {{base}} base • {{token}} token",
+
+  "portfolioTitle": "Portfólio",
+  "usdBalance": "Saldo USD",
+  "tokensCountLabel": "Tokens",
+  "holdings": "Holdings",
+  "noHoldings": "Você não tem tokens.",
+  "amountLabel": "Quantidade",
+  "sellBtn": "Vender",
+  "selling": "Vendendo...",
+  "transactionsLabel2": "Transações",
+  "noTransactionsYet": "Nenhuma transação ainda.",
+  "tokensText": "{{amount}} tokens",
+
+  "genericErrorInvalidJson": "invalid_json_response",
+  "genericErrorNetwork": "network_error"
 }
